@startuml

class Decl {
    +std::string name
    +type* decl_type
    +expr* value
    +Stmt* code
    +symbol* decl_symbol
    +Decl* next
    +int local_var_count
}

class Stmt {
    +stmt_t kind
    +Decl* decl
    +expr* init_expr
    +expr* expr_value
    +expr* next_expr
    +Stmt* body
    +Stmt* else_body
    +Stmt* next
}

class type
class expr
class symbol

Decl --> type : decl_type
Decl --> expr : value
Decl --> Stmt : code
Decl --> symbol : decl_symbol
Decl --> Decl : next


@enduml